--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <h3>Direkter Kontakt</h3>
             <p>
               <strong>E-Mail:</strong> info@bitvision-studios.de<br />
-              <strong>Ort:</strong> [Ihr Standort / Region]
+              <strong>Ort:</strong> 59590 Geseke 
             </p>
             <p>
               Auf Wunsch erhalten Sie ein unverbindliches, individuelles
